--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -7,7 +7,7 @@ This forms the base for understanding the more complex, inhomogeneous, scenarios
 The origin of the inhomogeneity lies in the spontaneous symmetry breaking that occurs at the phase transition.
 The phase transitions that we discuss in this Thesis are all the result of a change in the temperature of the material. 
 An order parameter (OP) can be associated with the symmetry breaking, being zero before the phase transition, and acquiring a nonzero value afterwards.
-Since the energy potential obeys the symmetries of the parent phase, multiple degenerate energy minima appear, each with a different orientation of the OP.
+Since the energy potential obeys the symmetries of the parent phase, multiple degenerate energy minima appear, each with a different orientation of the OP. \lp{make a fig with landau potential}
 The different orientations of the OP are thus completely equivalent from the energetic point of view, and can be transformed by the symmetry operations of the parent phase.
 For example, we saw previously that in GdMn$_2$O$_5$ there are two primary OPs, $\bm{L}_1$ and $\bm{L}_2$, describing the antiferromagnetic orders of the two Mn chains.
 It was shown there that four symmetry related combinations of these OPs lead to the same energy.
@@ -529,7 +529,7 @@ Away from the surface, when looking at larger length scales, the wall is most li
 We claim that this behavior is the main source of the observed softening.
 
 \section{Conclusions}
-\lp{reqrite}
+\lp{rewrite}
 In this chapter we have shown how, based on experimental observations, purely ferroelectric 180$^\circ$ DWs appear mechanically softer than the domains they separate.
 By carefully studying the experimental clues, and considering all possible mechanisms that might be happening, we isolated the most likely scenario that leads to DW softening.
 This is the sliding or bending mode associated with the homonymous DW motion.
