--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -205,10 +205,10 @@ We utilize both theoretical and computational tools to understand the nature of 
 \mainmatter
 % \Include{Introduction}
 % \Include{Theory}
-% \Include{Rashba}
+\Include{Rashba}
 % \Include{GdMn2O5}
 % \Include{Cr}
-\Include{Softening}
+% \Include{Softening}
 \backmatter
 \bibliography{references}
 \printindex
