--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -116,14 +116,14 @@ We neglected the last two terms of Eq.~\ref{eq:Rashba_dirac} since they are exce
 Before turning to a $\bm{k} \cdot \bm{p}$ expansion of the above equations, we take a moment to address which electric fields $\bm{\nabla}V$ will contribute to $V_2$ and which to $V_3$.
 It will turn out that the former is the well-known first-order Rashba-Bychkov term, whereas the latter leads to the atomic SOC.
 Both terms originate from the application of Eq.~\ref{eq:Rashba_momentum} to the third contribution in Eq.~\ref{eq:Rashba_dirac}.
-To do this, we separate $\bm E = \bm{\nabla}V$ into two contributions, the first coming from the potential wells around the atoms ($E_{\rm at}$), and the second originating from the internal field due to the polarization ($E_{\rm P}$)\footnote{We assume here that no external fields are applied, these can be included trivially by summing them to the internal field.}:
+	To do this, we separate $\bm E = \bm{\nabla}V$ into two contributions, the first due to the potential wells around the atoms ($E_{\rm a}$), and the second originating from the internal field due to the polarization ($E_{\rm P}$)\footnote{We assume here that no external fields are applied, these can be included trivially by summing them to the internal field.}:
 \begin{equation}
-	\bm{\nabla} V = \bm{E} = \bm{E}_{\rm at} + \bm{E}_{\rm P}
+	\bm{\nabla} V = \bm{E} = \bm{E}_{\rm a} + \bm{E}_{\rm P}
 \end{equation}
 These contributions, together with the two parts of the Bloch functions (i.e. the cell periodic $\unkr{n}{k}$, and envelope function $\eikr{r}$) are pictorially shown in Fig.~\ref{fig:Efield_cell_drawing}. 
 \begin{figure}[h]
 ~\centering
-\IncludeGraphics[width=\linewidth]{Rashba_potentials.png}\caption{\label{fig:Efield_cell_drawing}{\bf Potentials and wavefunctions inside the unit cell.} Pictorial representation of the different electric potentials ($V$) and fields ($E$) in a 2D square lattice. The blue spheres show the atoms, which produce the spherically symmetric red potential $V_a$ and field $E_a$. The purple slab denotes a uniform ferroelectric polarzation potential $V_p$ which in this case is directed along the crystalline $y$-direction, creating field $E_p$. The green and yellow surfaces denote two components of the Bloch function: $u_n(k) e^{ikx}$, where the yellow is the envelope plane wave part and the green the cell periodic part. $k$ and $p_u$ denote the two components to the momentum of the bloch function, the former from the envelope function, and the latter the contribution from the periodic part.}
+\IncludeGraphics[width=\linewidth]{Rashba_potentials.png}\caption{\label{fig:Efield_cell_drawing}{\bf Potentials and wavefunctions inside the unit cell.} Pictorial representation of the different electric potentials ($V$) and fields ($E$) in a 2D square lattice. The blue spheres show the atoms, which produce the spherically symmetric red potential $V_a$ and field $E_a$. The purple plane denotes a potential $V_p$ and field $E_p$, associated with the polarization. The green and yellow surfaces denote two components of the Bloch function: $u_n(k) e^{ikx}$, where the yellow is the envelope plane wave part and the green the cell periodic part. $k$ and $p_u$ denote the two components to the momentum of the bloch function, the former from the envelope function, and the latter the contribution from the periodic part.}
 \end{figure}
 
 Looking at the picture, it becomes clear that the contribution of the atomic potential applied to the envelope function is zero because while $\bm{k}$ is a, $\bm{E}_{at}$ is odd throughout the unit cell, leading to the contributions on either side of the potential wells to cancel out.
